<resources>
    <string name="app_name">DreamCatcher</string>
    <string name="dream_title_label">Dream</string>
    <string name="dream_title_hint">My First Dream</string>
    <string name="dream_details_time_label">Last updated</string>
    <string name="dream_details_time_value">Last updated %s</string>
    <string name="dream_details_fulfilled_label">Fulfilled</string>
    <string name="dream_details_Deferred_label">Deferred</string>
    <string name="dream_details_entries_label">Entries</string>
    <string name="list_item_reflection_count"> Reflections: %1$d</string>
    <string name="entry_0_button_text">Conceived</string>
    <string name="entry_1_button_text">Reflection one</string>
    <string name="entry_2_button_text">Reflection two</string>
    <string name="entry_3_button_text">Deferred</string>
    <string name="entry_4_button_text">button 4</string>
    <string name="reflection_hint">Enter reflection text</string>
    <string name="reflection_dialog_title">Add Reflection</string>
    <string name="reflection_dialog_positive">Add</string>
    <string name="reflection_dialog_negative">Cancel</string>
    <string name="add_reflection_button">Add Reflection</string>
    <string name="new_dream">New Dream</string>
    <string name="no_dreams">There are currently no dreams</string>
    <string name="share_dream">Share Dream</string>
    <string name="dream_photo">Capture Dream Photo</string>
    <string name="take_photo_menu">Take Photo</string>

    <string name="dream_title">%s</string>
    <string name="dream_date">%s</string>
    <string name="dream_reflections">Reflections: %s</string>
    <string name="dream_deferred_or_fulfilled">This dream has been %s.</string>
    <string name="dream_report_subject">DreamCatcher Dream Report</string>
    <string name="send_report">Send dream report via</string>


</resources>