<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

        <LinearLayout
            android:id="@+id/picture_and_title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

                <ImageView
                    android:id="@+id/dream_photo"
                    android:background="@color/material_dynamic_neutral30"
                    android:contentDescription="@string/dream_photo"
                    android:cropToPadding="true"
                    android:scaleType="centerInside"
                    android:layout_width="80dp"
                    android:layout_height="80dp"/>

            <LinearLayout
                android:id="@+id/title_and_date_layout"
                android:layout_width="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/dream_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceHeadline5"
                    android:text="@string/dream_title_label" />

                <EditText
                    android:id="@+id/title_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dream_title_hint"
                    android:importantForAutofill="no"
                    android:inputType="text" />


                <TextView
                    android:id="@+id/last_updated_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/dream_details_time_value"
                    android:textAppearance="?attr/textAppearanceHeadline5"
                    android:textSize="12sp" />


            </LinearLayout>


        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="16dp">
            <CheckBox
                android:id="@+id/fulfilled_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dream_details_fulfilled_label" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <CheckBox
                android:id="@+id/deferred_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dream_details_Deferred_label" />

        </LinearLayout>

        <TextView
            android:id="@+id/entries_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:text="@string/dream_details_entries_label" />


        <LinearLayout
            android:id="@+id/recycler_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/dream_entry_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                tools:listitem="@layout/list_item_dream_entry" />

        </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_reflection_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:clickable="true"
        android:theme="@style/Theme.MaterialComponents"
        android:contentDescription="@string/add_reflection_button"
        android:focusable="true"
        android:src="@drawable/ic_add"
        app:backgroundTint="@color/teal_700"
        app:tint="@color/white" />

</LinearLayout>